LOG Updated to 1.132680 (by updates_builder)

--- a/.abf.yml
+++ b/.abf.yml
@@ -1,4 +1,5 @@
 removed_sources:
   Pod-Wordlist-hanekomu-1.110090.tar.gz: 0b3fa2a2ef5b44b14d4cf4c8881c656e283ebc77
-sources:
   Pod-Wordlist-hanekomu-1.130240.tar.gz: 676ddb3001ba52a8b7ac874c572819fdb4bb27e2
+sources:
+  Pod-Wordlist-hanekomu-1.132680.tar.gz: 06f49ffa6ad6169f7a78d891e0acd67290034538
